--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Holberton School</title>
-  </head>
-  <body style="padding: 0; margin: 0;height: 100vh;display: flex;flex-direction: column;align-items: flex-end; position: relative;">
+<html>
+  <head></head>
+  <body style="margin: 0; padding: 0">
     <header
       style="background-color: #ff0000; height: 70px; width: 100%"
     ></header>
-    <footer style="background-color: #00ff00; height: 60px; width: 100%;position: absolute;  bottom: 0; text-align: center;line-height: 60px;">
+    <footer
+      style="
+        background-color: #00ff00;
+        height: 60px;
+        width: 100%;
+        display: grid;
+        place-items: center;
+      "
+    >
       Holberton School
     </footer>
   </body>
