--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -10,6 +10,8 @@
         width: 100%;
         display: grid;
         place-items: center;
+        position: absolute;
+        bottom: 0;
       "
     >
       Holberton School
