--- a/web_static/1-index.html
+++ b/web_static/1-index.html
@@ -16,6 +16,8 @@
         width: 100%;
         display: grid;
         place-items: center;
+        position: absolute;
+        bottom: 0;
       }
     </style>
   </head>
