4-indexHtml and fix lower than 4

--- a/web_static/4-index.html
+++ b/web_static/4-index.html
@@ -2,14 +2,20 @@
 <html dir="ltr" lang="en">
   <head>
     <title>AirBnB clone</title>
-    <link rel="stylesheet" href="./styles/3-common.css" />
+    <link rel="stylesheet" href="./styles/4-common.css" />
     <link rel="stylesheet" href="./styles/3-header.css" />
     <link rel="stylesheet" href="./styles/3-footer.css" />
+    <link rel="stylesheet" href="./styles/4-filters.css" />
     <link rel="icon" type="image/x-icon" href="./images/favicon.ico" />
     <meta name="description" content="airbnb clone" />
   </head>
   <body>
     <header></header>
+    <div class="container">
+      <section class="filters">
+        <button>Search</button>
+      </section>
+    </div>
     <footer>Holberton School</footer>
   </body>
 </html>
