--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -1,20 +1,23 @@
-<html>
-  <body style="margin: 0; padding: 0">
-    <header
-      style="background-color: #ff0000; height: 70px; width: 100%"
-    ></header>
-    <footer
-      style="
-        background-color: #00ff00;
-        height: 60px;
-        width: 100%;
-        display: grid;
-        place-items: center;
-        position: absolute;
-        bottom: 0;
-      "
-    >
-      Holberton School
-    </footer>
-  </body>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
+  <html>
+    <body style="margin: 0; padding: 0">
+      <header
+        style="background-color: #ff0000; height: 70px; width: 100%"
+      ></header>
+      <footer
+        style="
+          background-color: #00ff00;
+          height: 60px;
+          width: 100%;
+          display: grid;
+          place-items: center;
+          position: absolute;
+          bottom: 0;
+        "
+      >
+        Holberton School
+      </footer>
+    </body>
+  </html>
 </html>
