--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html dir="ltr" lang="en">
   <head>
     <link rel="stylesheet" href="./styles/2-common.css" />
     <link rel="stylesheet" href="./styles/2-header.css" />
